--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "repository": {
     "type": "git",
@@ -30,7 +29,7 @@
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "neo4j-driver": "^1.7.2",
+    "neo4j-driver": "^1.7.0-rc2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   }
