--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
     "cors": "^2.8.5",
+    "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
